Add cmake command to copy sunsky datasets to build directory
Also modify resource path to match that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -619,3 +619,23 @@ install(
   DIRECTORY ${MI_BINARY_DIR}/data/ior
   DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}
 )
+
+file(GLOB SUNSKY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/data/sunsky/datasets/*.bin")
+add_custom_command(
+        TARGET copy-resources DEPENDS SUNSKY_FILES
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/resources/data/sunsky/datasets"
+        "${MI_BINARY_DIR}/data/sunsky"
+)
+if (MSVC AND MI_ENABLE_PYTHON)
+  add_custom_command(
+          TARGET copy-resources DEPENDS SUNSKY_FILES
+          COMMAND ${CMAKE_COMMAND} -E copy_directory
+          "${CMAKE_CURRENT_SOURCE_DIR}/resources/data/sunsky/datasets"
+          "${MI_BINARY_DIR}/data/sunsky"
+  )
+endif()
+install(
+        DIRECTORY ${MI_BINARY_DIR}/data/sunsky
+        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}
+)
